--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -36,6 +36,7 @@
         "branchesAdd": "Add branch",
         "branchesDelete": "Delete"
       }
-    }
+    },
+    "configurationChangedSuccess": "Configuration changed"
   }
 }
