--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -4,8 +4,8 @@
       "nav-link": "Jenkins",
       "form": {
         "header": "Global Jenkins Configuration",
-        "url": "Url",
-        "urlHelp": "Url of Jenkins installation (with contextpath).",
+        "url": "URL",
+        "urlHelp": "URL of Jenkins installation (with contextpath).",
         "disableRepositoryConfiguration": "Do not allow repository configuration",
         "disableRepositoryConfigurationHelp": "Do not allow repository owners to configure jenkins hooks. You have to restart your application server after changing this value.",
         "disableGitTrigger": "Disable Git trigger",
@@ -18,8 +18,8 @@
       "nav-link": "Jenkins",
       "form": {
         "header": "Jenkins Configuration",
-        "url": "Url",
-        "urlHelp": "Url of Jenkins installation (with contextpath).",
+        "url": "URL",
+        "urlHelp": "URL of Jenkins installation (with contextpath).",
         "project": "Project",
         "projectHelp": "The name of the Jenkins project.",
         "token": "Token",
