--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -7,7 +7,7 @@
         "url": "URL",
         "urlHelp": "URL of Jenkins installation (with contextpath).",
         "disableRepositoryConfiguration": "Do not allow repository configuration.",
-        "disableRepositoryConfigurationHelp": "Do not allow repository owners to configure jenkins hooks. Note: You have to restart your application server after changing this value.",
+        "disableRepositoryConfigurationHelp": "Do not allow repository owners to configure jenkins hooks.",
         "disableGitTrigger": "Disable Git trigger",
         "disableGitTriggerHelp": "Disable trigger for git repositories. Note: The git trigger requires version 1.1.14 or above of the jenkins git plugin.",
         "disableMercurialTrigger": "Disable Mercurial trigger",
