--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -40,7 +40,7 @@
         "parameterName": "Name",
         "parameterNameHelp": "The name of the parameter.\nIt must match the defined build job parameter name in jenkins exactly.",
         "parameterValue": "Value",
-        "parameterValueHelp": "The value of the parameter:\n - Use \"true\" or \"false\" as boolean parameters\n - To use a Run Parameter, the value should be in the format \"jobname#buildNumber\"",
+        "parameterValueHelp": "The value of the parameter:\n - Use \"true\" or \"false\" as boolean parameters\n - To use a Run Parameter, the value should be in the format \"jobname#buildNumber\"\n - You may use variable parameters from context formatted like ${repository.name}",
         "addParameter": "Add parameter",
         "deleteParameter": "Delete"
       }
