--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -9,9 +9,11 @@
         "disableRepositoryConfiguration": "Repository-spezifische Konfiguration verbieten",
         "disableRepositoryConfigurationHelp": "Repository-spezifische Konfiguration durch Owner von Repositories verbieten.",
         "disableGitTrigger": "Git-Trigger deaktivieren",
-        "disableGitTriggerHelp": "Deaktiviert Trigger für Git-Repositories. Hinweis: Der Git-Trigger erfordert Version 1.1.14 oder höher des Jenkins-Git-Plugins.",
+        "disableGitTriggerHelp": "Deaktiviert Trigger für Git-Repositories. \nHinweis: Der Git-Trigger erfordert Version 1.1.14 oder höher des Jenkins-Git-Plugins.",
         "disableMercurialTrigger": "Mercurial-Trigger deaktivieren",
-        "disableMercurialTriggerHelp": "Deaktiviert Trigger für Mercurial-Repositories. Hinweis: Der Mercurial-Trigger erfordert Version 1.38 oder höher des Jenkins-Mercurial-Plugins."
+        "disableMercurialTriggerHelp": "Deaktiviert Trigger für Mercurial-Repositories. \nHinweis: Der Mercurial-Trigger erfordert Version 1.38 oder höher des Jenkins-Mercurial-Plugins.",
+        "disableEventTrigger": "Event-Trigger deaktivieren",
+        "disableEventTriggerHelp": "Deaktiviert Trigger für SCM-Manager Events. \nHinweis: Diese Events werden nur verarbeitet, wenn im Jenkins das Jenkins-SCM-Manager-Plugin installiert ist. \nDamit wird der Jenkins über Änderungen an Branches, Tags oder Pull Requests informiert."
       }
     },
     "local": {
