--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -10,6 +10,8 @@
         "disableRepositoryConfigurationHelp": "Repository-spezifische Konfiguration durch Owner von Repositories verbieten.",
         "disableGitTrigger": "Git-Trigger deaktivieren",
         "disableGitTriggerHelp": "Deaktiviert Trigger für Git-Repositories. \nHinweis: Der Git-Trigger erfordert Version 1.1.14 oder höher des Jenkins-Git-Plugins.",
+        "disableSubversionTrigger": "Subversion-Trigger deaktivieren",
+        "disableSubversionTriggerHelp": "Deaktiviert Trigger für Subversion-Repositories.",
         "disableMercurialTrigger": "Mercurial-Trigger deaktivieren",
         "disableMercurialTriggerHelp": "Deaktiviert Trigger für Mercurial-Repositories. \nHinweis: Der Mercurial-Trigger erfordert Version 1.38 oder höher des Jenkins-Mercurial-Plugins.",
         "disableEventTrigger": "Event-Trigger deaktivieren",
