Refactor internal structure and adjust config to match new Jenkins api requirements

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -4,6 +4,8 @@
       "nav-link": "Jenkins",
       "form": {
         "header": "Globale Jenkins Konfiguration",
+        "generalSubtitle": "Allgemein",
+        "gitOnlySubtitle": "Nur für Git",
         "warning": "Warnung: Die hier konfigurierte URL erhält Events die Informationen über Namespaces und Namen von Repositories enthalten und somit Informationen über diese Repositories offenlegen können, obwohl der im Jenkins hinterlegte Nutzer für den SCM-Manager keine Zugriffsrechte auf diese Repositories hat.",
         "url": "URL",
         "urlHelp": "URL der Jenkins Installation (mit Kontextpfad).",
@@ -17,10 +19,12 @@
         "disableMercurialTriggerHelp": "Deaktiviert Trigger für Mercurial-Repositories. \nHinweis: Der Mercurial-Trigger erfordert Version 1.38 oder höher des Jenkins-Mercurial-Plugins.",
         "disableEventTrigger": "Event-Trigger deaktivieren",
         "disableEventTriggerHelp": "Deaktiviert Trigger für SCM-Manager Events. \nHinweis: Diese Events werden nur verarbeitet, wenn im Jenkins das Jenkins-SCM-Manager-Plugin installiert ist. \nDamit wird der Jenkins über Änderungen an Branches, Tags oder Pull Requests informiert.",
-        "username": "Benutzername (nur für Subversion-Trigger)",
+        "username": "Benutzername",
         "usernameHelp": "Benutzername, der für die Authentifikation auf dem Jenkins-CI-Server genutzt wird. Die Anmeldedaten werden nur für SVN Commit Trigger Anfragen benötigt, wenn der CSRF Schutz auf dem Jenkins Server aktiviert ist.",
-        "apiToken": "API Token (nur für Subversion-Trigger)",
-        "apiTokenHelp": "API Token für den Benutzer. Dieser Token wird für die Authentifikation genutzt. Der API Token kann auf dem Jenkins-Server unter der folgenden URL erstellt werden: http://yourjenkinsserver/jenkins/user/username/configure."
+        "apiToken": "API Token",
+        "apiTokenHelp": "API Token für den Benutzer. Dieser Token wird für die Authentifikation genutzt. Der API Token kann auf dem Jenkins-Server unter der folgenden URL erstellt werden: http://yourjenkinsserver/jenkins/user/username/configure.",
+        "gitAuthenticationToken": "Git Authentifizierungstoken",
+        "gitAuthenticationTokenHelp": "Dieser Token wird benötigt um Git basierte Jobs zu triggern. Sie können diesen Token in den Sicherheitseinstellungen Ihres Jenkins erstellen: http://yourjenkinsserver/configureSecurity/."
       }
     },
     "local": {
