--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -4,6 +4,8 @@
       "nav-link": "Jenkins",
       "form": {
         "header": "Global Jenkins Configuration",
+        "generalSubtitle": "General",
+        "gitOnlySubtitle": "Git only",
         "warning": "Warning: The URL configured here will receive events that contain information about repository names and namespaces and therefore may reveal information about your repositories, even though the configured user in the Jenkins server may not be permitted to see those repositories.",
         "url": "URL",
         "urlHelp": "URL of Jenkins installation (with contextpath).",
@@ -17,10 +19,12 @@
         "disableMercurialTriggerHelp": "Disable trigger for mercurial repositories. \nNote: The mercurial trigger requires version 1.38 or above of the jenkins mercurial plugin.",
         "disableEventTrigger": "Disable event trigger",
         "disableEventTriggerHelp": "Disable trigger for SCM-Manager events. \nNote: This events are only processed if the Jenkins-SCM-Manager-Plugin is installed. \nThe events informs Jenkins about changes regarding branches, tags or pull requests.",
-        "username": "Username (for Subversion triggers, only)",
+        "username": "Username",
         "usernameHelp": "Username which is used for the authentication on the Jenkins ci server. This is only required for SVN commit trigger requests if CSRF protection is enabled on the Jenkins ci server.",
-        "apiToken": "API Token (for Subversion triggers, only)",
-        "apiTokenHelp": "The API Token of the user. This token is used for authentication. You could get your API Token from your Jenkins Server at http://yourjenkinsserver/jenkins/user/username/configure."
+        "apiToken": "API Token",
+        "apiTokenHelp": "The API Token of the user. This token is used for authentication. You could get your API Token from your Jenkins Server at http://yourjenkinsserver/jenkins/user/username/configure.",
+        "gitAuthenticationToken": "Git Authentication Token",
+        "gitAuthenticationTokenHelp": "The token to trigger git-based jobs. You could get your Git Authentication Token from your Jenkins Server at http://yourjenkinsserver/configureSecurity/."
       }
     },
     "local": {
