--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -21,7 +21,7 @@
         "disableEventTriggerHelp": "Disable trigger for SCM-Manager events. \nNote: This events are only processed if the Jenkins-SCM-Manager-Plugin is installed. \nThe events informs Jenkins about changes regarding branches, tags or pull requests.",
         "username": "Username",
         "usernameHelp": "Username which is used for the authentication on the Jenkins ci server. This is only required for SVN commit trigger requests if CSRF protection is enabled on the Jenkins ci server.",
-        "apiToken": "API Token",
+        "apiToken": "API Token of User",
         "apiTokenHelp": "The API Token of the user. This token is used for authentication. You could get your API Token from your Jenkins Server at http://yourjenkinsserver/jenkins/user/username/configure.",
         "gitAuthenticationToken": "Git Authentication Token",
         "gitAuthenticationTokenHelp": "The token to trigger git-based jobs. You could get your Git Authentication Token from your Jenkins Server at http://yourjenkinsserver/configureSecurity/."
@@ -35,13 +35,13 @@
         "urlHelp": "URL of Jenkins installation (with contextpath).",
         "project": "Project",
         "projectHelp": "The name of the Jenkins project.",
-        "token": "Token",
+        "token": "Authentication Token",
         "tokenHelp": "Jenkins Authentication Token",
         "csrf": "CSRF Protected",
         "csrfHelp": "Should be checked if your Jenkins instance is csrf protected.",
         "username": "Username",
         "usernameHelp": "Username which is used for the authentication on the Jenkins ci server.",
-        "apiToken": "API Token",
+        "apiToken": "API Token of User",
         "apiTokenHelp": "The API Token of the user. This token is used for authentication. You could get your API Token from your Jenkins Server at http://yourjenkinsserver/jenkins/user/username/configure.",
         "branchesHeader": "Branches",
         "branchesHelp": "List of branches.",
