--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -21,7 +21,7 @@
         "disableEventTriggerHelp": "Deaktiviert Trigger für SCM-Manager Events. \nHinweis: Diese Events werden nur verarbeitet, wenn im Jenkins das Jenkins-SCM-Manager-Plugin installiert ist. \nDamit wird der Jenkins über Änderungen an Branches, Tags oder Pull Requests informiert.",
         "username": "Benutzername",
         "usernameHelp": "Benutzername, der für die Authentifikation auf dem Jenkins-CI-Server genutzt wird. Die Anmeldedaten werden nur für SVN Commit Trigger Anfragen benötigt, wenn der CSRF Schutz auf dem Jenkins Server aktiviert ist.",
-        "apiToken": "API Token",
+        "apiToken": "API Token des Benutzers",
         "apiTokenHelp": "API Token für den Benutzer. Dieser Token wird für die Authentifikation genutzt. Der API Token kann auf dem Jenkins-Server unter der folgenden URL erstellt werden: http://yourjenkinsserver/jenkins/user/username/configure.",
         "gitAuthenticationToken": "Git Authentifizierungstoken",
         "gitAuthenticationTokenHelp": "Dieser Token wird benötigt um Git basierte Jobs zu triggern. Sie können diesen Token in den Sicherheitseinstellungen Ihres Jenkins erstellen: http://yourjenkinsserver/configureSecurity/."
@@ -35,13 +35,13 @@
         "urlHelp": "URL der Jenkins Installation (mit Kontextpfad).",
         "project": "Projekt",
         "projectHelp": "Der Name des Projekts in Jenkins.",
-        "token": "Token",
+        "token": "Authentifikations-Token",
         "tokenHelp": "Jenkins Authentifikations-Token",
         "csrf": "CSRF Absicherung",
         "csrfHelp": "Auswählen, wenn für die Jenkins-Instanz eine CSRF-Absicherung konfiguriert ist.",
         "username": "Benutzername",
         "usernameHelp": "Benutzername, der für die Authentifikation auf dem Jenkins-CI-Server genutzt wird.",
-        "apiToken": "API Token",
+        "apiToken": "API Token des Benutzers",
         "apiTokenHelp": "API Token für den Benutzer. Dieser Token wird für die Authentifikation genutzt. Der API Token kann auf dem Jenkins-Server unter der folgenden URL erstellt werden: http://yourjenkinsserver/jenkins/user/username/configure.",
         "branchesHeader": "Branches",
         "branchesHelp": "Liste von Branches.",
